changed manifest json and link in index.html to point to it.

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "FloodAlert",
-    "short_name": "Flood",
+    "name": "PumpMonitor",
+    "short_name": "Pumps",
     "display": "standalone"
 }
